--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -32,9 +32,15 @@ padding:0;
 }
 
 #syllabus-new p strong {
-  font-weight: 400;
-  color:#ccc;
+  font-weight: bold;
+  color:#000;
 }
+
+#syllabus-new p {
+  line-height: 1.2em;
+  margin-bottom: 2em;
+}
+
 
 #syllabus-new h1 {
 font-family: 'Amatic SC', sans-serif;
