--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-width: 42em;
+width: 35em;
 margin: .3em auto 0em;
 padding:0;
 }
@@ -39,6 +39,7 @@ padding:0;
 #syllabus-new p {
   line-height: 1.5em;
   margin-bottom: 2em;
+  font-size: 130%;
 }
 
 
