--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -66,7 +66,10 @@ color:#333;
 font-family: 'Oxygen', sans-serif;
 font-weight: bold;
 color:#666;
-font-size: 100%;
+font-size: 140%;
+line-height: 1.3em;
+margin-top: .5em;
+margin-bottom:.5em;
 
 }
 
