--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index2.html">Spatial Humanities Working Group</a>
+          <a class="navbar-brand" href="index.html">Spatial Humanities Working Group</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
