--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -3,11 +3,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,500,700,900);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300,500);
 
-@media (min-width: 992px) 
-{
-/*  .container {max-width:60em;} */
-}
-
 @media screen {
 
 /* Move down content because we have a fixed navbar that is 50px tall */
@@ -17,7 +12,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   line-height: 1.4em;
   background-color: #fefefe;  
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .jumbotron {
@@ -31,7 +26,8 @@ margin-bottom: 4em;
 }
 
 .navbar-brand {
-  line-height: 2.6em;
+  font-size:1.3em;
+  line-height: 2.4em;
 }
 
 .nogrid {
@@ -60,12 +56,14 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-weight: 900;
-  margin: 1em 0 .75em 0;  
+  font-weight: 700;
+  margin: 1.5em 0 .75em 0;
+  font-size: 1.8em;  
 }
 
 h1.title {
   font-family: 'Roboto', sans-serif;
+  font-size: 2em;
   font-weight: 700;
   color:#fefefe;
   font-size: 4em;
@@ -75,7 +73,7 @@ h1.title {
 p.title-text {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  font-size: 1.4em;
+  font-size: 1.2em;
   color:#eeeeee;
   line-height: 1.4em;
 }
@@ -92,11 +90,10 @@ h1.homeheading {
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
-  margin-top: 0em;
   font-weight: bold;
   font-size: 1.4em;
   line-height: 120%;
-  margin: .8em 0 .8em 0;
+  margin: 0em 0 .8em 0;
 }
 
 h3 {
@@ -105,14 +102,13 @@ h3 {
   text-transform: uppercase;
   color:#666;
   font-size: 1.2em;
-  margin: 0;
+  margin: 0 0 1em 0;
 }
 
 h4 {
   color:#bbb;
+  font-size:1.2em;
 }
-
-
 
 hr {
   margin-top: 2em;
@@ -163,16 +159,15 @@ a {
   align-items: center;
 }
 
-.section-block {
-width:38em;
-//font-family: 'Alegreya', serif;
-line-height: 1.4em;
-font-size: 20px;
-margin: 0em auto 0em;
-padding: 0 0 1em 1em;
-background: #333;
-color: #aaa;
-overflow-x: hidden; 
+
+li {
+margin-bottom:.4em;  
+}
+
+li ul li {
+  color:#666666;
+  list-style: none;
+  margin-bottom:1em;
 }
 
 
@@ -210,48 +205,6 @@ background-image: url(/images/digital-mapping-sm/dsc_0052.jpg);
 }
 
 
-
-.footer {
-  padding: 8px 0;
-  font-family: 'Oxygen', sans-serif;
-  font-size: 80%;
-  color: #666;
-  border-top: 3px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
-}
-
-.footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.footer .contact a {
-  color: #8085C1;
-}
-
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.footer .rss img {
-  border: none;
-}
-
-li {
-margin-bottom:.4em;  
-}
-
-li ul li {
-  color:#666666;
-  list-style: none;
-  margin-bottom:1em;
-}
-
-
-
 } /* end media screen */
 
 
@@ -260,8 +213,13 @@ li ul li {
 /* SMALL SCREEN
 /*
 /*****************************************************************************/
-@media screen and (max-width: 560px) {
+@media (max-width: 768px) 
+{
+  body {
+    font-size: .8rem;
+  }
 }
+
 
 /*****************************************************************************/
 /*
@@ -336,20 +294,9 @@ h3 {
   display:none;
 }
 
-#syllabus-new .section-photo-break {
-  display:none;
-  background-image:none;
-}
-
-#HiddenMenu, #HoverSpace { 
-  display:none;
-}
-
 hr {
   clear:both;
 }
-
   .page-break { display: block; page-break-before: always; }
-
-
 }
+
