--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 
 @import url(http://fonts.googleapis.com/css?family=Alegreya:400italic,400,700);
 @import url(http://fonts.googleapis.com/css?family=Oxygen:400,700);
+@import url(http://fonts.googleapis.com/css?family=Barlow);
 @import url(http://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:300);
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,300,300italic,700italic,900);
 
@@ -125,7 +126,7 @@ img {
 
 .navigation li a.navheader {
   font-weight: bold;
-  color:#800;  
+  color:#800;
 }
 
 .slide-trigger {
@@ -259,11 +260,11 @@ img.footer-icon {
   vertical-align:middle;
   padding:0;
   margin:0;
-  border:none; 
+  border:none;
 }
 
 li {
-margin-bottom:.4em;  
+margin-bottom:.4em;
 }
 
 li ul li {
@@ -296,7 +297,7 @@ ul.posts span {
 }
 
 #home {
-  text-align: left;  
+  text-align: left;
 }
 /*****************************************************************************/
 /*
@@ -307,8 +308,8 @@ ul.posts span {
 .hometext {
   font-family: sans-serif;
   font-family: 'Alegreya', serif;
-  font-size:120%; 
-  text-align:right; 
+  font-size:120%;
+  text-align:right;
   line-height:1.3em;
   width:13.4em;
 }
@@ -332,10 +333,10 @@ ul.posts span {
 
 .homename {
   font-family: 'Oxygen', sans-serif;
-  font-size:400%; 
-  letter-spacing:-4px; 
-  font-weight:bold; 
-  color:#990000; 
+  font-size:400%;
+  letter-spacing:-4px;
+  font-weight:bold;
+  color:#990000;
   margin:0px 0 1em 0;
   width:7em;
 }
@@ -344,7 +345,7 @@ ul.posts span {
   font-size:90%;
   font-family: 'Oxygen', sans-serif;
   color:#666666;
-  margin: .8em 0 2em .3em; 
+  margin: .8em 0 2em .3em;
 }
 
 
@@ -506,14 +507,14 @@ font-size:85%;
 
 .course-img {
   float:right;
-  padding: 0 0 1em 1em; 
+  padding: 0 0 1em 1em;
   width:300px;
 }
 
 .course-img-horiz {
   width:400px;
   float:right;
-  padding: 0 0 1em 1em; 
+  padding: 0 0 1em 1em;
 
 }
 
@@ -572,7 +573,7 @@ background-color: #ccc;
 /*****************************************************************************/
 
 @media screen and (max-width: 560px) {
-  
+
 a {
   color:#c70;
 }
@@ -677,7 +678,7 @@ padding: .3em 0 .3em;
 }
 
 #syllabus2015 p {
- padding-bottom: .8em 
+ padding-bottom: .8em
 }
 
 p, div, ul, li {
@@ -710,7 +711,7 @@ h3 {
 }
 
 
-#HiddenMenu, #HoverSpace { 
+#HiddenMenu, #HoverSpace {
   display:none;
 }
 
