--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -136,7 +136,7 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Cabin', sans-serif;
   margin-bottom: 1.5em;
-  font-size: calc( 1.2rem + 18 * ((100vw - 500px) / 1500));
+  font-size: calc( 1rem + 18 * ((100vw - 500px) / 1500));
   line-height:1.5em;
   font-weight:200;
 }
@@ -179,7 +179,7 @@ h1 {
   margin-top:1rem;
   font-family: 'Titillium Web', sans-serif;
   font-weight: 800;
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 
@@ -330,8 +330,8 @@ background-image: url(/images/digital-mapping-sm/dsc_0052.jpg);
 /*****************************************************************************/
 @media (max-width: 768px)
 {
-  body {
-    font-size: .9em;
+  html {
+    font-size: 18px;
   }
 
 }
@@ -339,9 +339,13 @@ background-image: url(/images/digital-mapping-sm/dsc_0052.jpg);
 
 @media (max-width: 576px)
 {
-  body {
-    font-size: .8em;
+  html {
+    font-size: 16px;
   }
+
+h1 {
+  font-size:2rem;
+}
 
 .text-xs-left {
   border-right:none;
