--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -24,6 +24,8 @@ body {
   font-family: 'Barlow';
   font-size: calc( 1rem + 36 * ((100vw - 500px) / 1500));
   line-height: calc( 1rem + 36 * ((100vw - 500px) / 1500));
+  font-size: 1.2rem;
+  line-height: 1.2rem;
   color:#333;
   font-weight:400;
   text-transform:uppercase;
@@ -65,7 +67,7 @@ h2.person {
 
 .text-lg-right {
   text-align:right;
-  border-right:5px solid #444;
+  border-right:3px solid #444;
 }
 
 .talk-desc {
@@ -138,7 +140,7 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-family: 'Cabin', sans-serif;
   margin-bottom: 1.5em;
-  font-size: calc( 1rem + 18 * ((100vw - 500px) / 1500));
+  font-size: calc( 1rem + 6 * ((100vw - 500px) / 1500));
   line-height:1.4em;
   font-weight:200;
 }
@@ -154,6 +156,7 @@ border:4px solid #673d36;
 padding:2rem 1rem;
 background:#ed7d4c;
 background:#fcf3ef;
+background:#f6f6f6;
 margin-top:0em;
 color:#333;
 }
@@ -333,7 +336,7 @@ background-image: url(/images/digital-mapping-sm/dsc_0052.jpg);
 @media (max-width: 768px)
 {
   html {
-    font-size: 18px;
+    font-size: 17px;
   }
 
 }
@@ -349,11 +352,21 @@ h1 {
   font-size:2rem;
 }
 
+.row-talk {
+  border-left:0px;
+  border-right:0px;
+  padding-left:0;
+  padding-right:0;
+}
+
 .text-xs-left {
   border-right:none;
   text-align:left;
 }
 
+.talk-desc {
+  margin-left:0rem;
+}
 
 }
 
