--- a/css/spatial-humanities.css
+++ b/css/spatial-humanities.css
@@ -90,6 +90,7 @@ text-align:center;
 .brown {
   background-color: #673d36;
   background-color:#ed7d4c;
+  background-color:#8ebcd6;
 }
 
 .navbar {
